Se migran los servicios para usar repositorios y se actualizan métodos para retornar DTOs de respuesta. Se añaden nuevas excepciones personalizadas, mappers, y ampliación de enums.